--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1{ margin-top: 1.2rem;
     
 }
 body{
-    background-color:#EFA9AE;
+    background: linear-gradient(to right,#edbed6, #fc429f);
     font-family:sans-serif;
 }
 
@@ -32,6 +32,11 @@ justify-content: center;
     padding: 5px;
     font-family: cursive;
 
+}
+
+#reset-btn:hover{
+transform: scale(1.2);
+border:5px solid white;
 }
 .grid-container{
     display: grid;
@@ -67,6 +72,7 @@ justify-content: center;
     font-size: 40px;
     font-weight: bold;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+     margin-top: 10px;
 
 
 }
