--- a/style.css
+++ b/style.css
@@ -62,7 +62,9 @@ border:5px solid white;
 }
 
 .item:hover{
-    box-shadow: 2px 4px 7px rgb(25, 11, 40);
+transform: scale(1.0);
+border:4px solid pink;
+cursor: pointer;
 }
 
 .message{
